05122022 Update Ammo Crafting

--- a/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/items/items_materials.ltx
+++ b/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/items/items_materials.ltx
@@ -451,6 +451,36 @@ inv_grid_x			                                   = 1
 inv_grid_y			                                   = 18
 inv_ui_sign					                           = laser
 
+[mat_lead]:gun_mat_base
+inv_name_short			                               = mat_lead
+description			                                   = mat_lead_desc
+inv_name			                                   = mat_lead
+inv_grid_width			                               = 1
+inv_grid_height			                               = 1
+inv_grid_x			                                   = 0
+inv_grid_y			                                   = 19
+inv_ui_sign					                           = lead
+
+[mat_tungsten]:gun_mat_base
+inv_name_short			                               = mat_tungsten
+description			                                   = mat_tungsten_desc
+inv_name			                                   = mat_tungsten
+inv_grid_width			                               = 1
+inv_grid_height			                               = 1
+inv_grid_x			                                   = 1
+inv_grid_y			                                   = 19
+inv_ui_sign					                           = tungsten
+
+[alloy_powder]:gun_mat_base
+inv_name_short			                               = alloy_powder
+description			                                   = alloy_powder_desc
+inv_name			                                   = alloy_powder
+inv_grid_width			                               = 1
+inv_grid_height			                               = 1
+inv_grid_x			                                   = 2
+inv_grid_y			                                   = 19
+inv_ui_sign					                           = alloy
+
 
 ; -------------------------- For Medical Stuff ----------------------------------
 
@@ -496,3 +526,4 @@ inv_grid_height			                               = 1
 inv_grid_x			                                   = 3
 inv_grid_y			                                   = 4
 inv_ui_sign					                           = skin_glue
+
