--- a/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/settings/craft.ltx
+++ b/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/settings/craft.ltx
@@ -1396,7 +1396,7 @@ x_anpeq = 5, recipe_basic_0, prt_i_scrap,30, prt_i_plastic, 5
 x_laser_green = 5, recipe_basic_0, prt_i_scrap,30, prt_i_plastic, 5
 x_laser_blue = 5, recipe_basic_0, prt_i_scrap,30, prt_i_plastic, 5
 
-
+small_battery = 5, recipe_basic_0, prt_i_scrap,30, prt_i_plastic, 5
 
 ;;--==========================< Item combinations >=============================
 ;[[
