--- a/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/settings/death_generic.ltx
+++ b/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/settings/death_generic.ltx
@@ -29,43 +29,12 @@ bolt_bullet             	                    = 0, 4
 
 prt_i_scrap                                     = 0, 10
 prt_i_plastic                                     = 0, 10
-d_rags                                     = 0, 3
-c_rags                                     = 0, 3
+d_rags                                     = 1, 10
+c_rags                                     = 1, 10
 
-fmj_9x18                                     = 5, 15
-fmj_9x19                                     = 5, 15
-fmj_11.43x23                                 = 5, 15
-pmm_9x18                                     = 0, 15
-ap_9x18                                      = 0, 15
-pbp_9x19                                     = 0, 15
-ap_9x19                                      = 0, 15
-hydro_11.43x23                               = 0, 15
-
-fmj_545x39                                   = 5, 30
-fmj_556x45                                   = 5, 30
-fmj_57x28                                    = 5, 30
-fmj_9x39                                     = 5, 30
-fmj_792x33                                   = 5, 30
-fmj_762x25                                   = 5, 30
-fmj_762x39                                   = 5, 30
-fmj_762x51                                   = 5, 30
-fmj_762x54                                   = 5, 30
-ep_545x39                                    = 0, 30
-ap_545x39                                    = 0, 30
-ss190_556x45                                 = 0, 30
-ap_556x45                                    = 0, 30
-ss195_57x28                                  = 0, 30
-ap_9x39                                      = 0, 30
-ap_792x33                                    = 0, 30
-ps_762x25                                    = 0, 30
-ap_762x39                                    = 0, 30
-ap_762x51                                    = 0, 30
-7h14_762x54                                  = 0, 30
-ap_762x54                                    = 0, 30
-
-buck_12x70                                   = 3, 7
-zhekan_12x70                                 = 0, 7
-dart_12x70                                   = 0, 7
+mat_lead = 10,50
+mat_tungsten = 10,30
+alloy_powder = 10,50
 
 gunpowder             	                    = 10, 50
 primer             	                        = 10, 30
@@ -73,12 +42,7 @@ case_hg             	                    = 10, 30
 case_rf             	                    = 10, 30
 case_sg             	                    = 10, 30
 
-optic_glass                                 = 0, 1
-small_module                                = 0, 1
-small_battery                               = 0, 1
-laser_module                                = 0, 1
-
-ammo_9x18_fmj                                   = 0, 6
+ammo_9x18_fmj_                                   = 0, 6
 ammo_9x18_pmm                                   = 0, 6
 ammo_9x18_ap                                    = 0, 6
 ammo_9x19_pbp                                   = 0, 6
@@ -128,42 +92,6 @@ grenade_f1
 grenade_rgd5
 grenade_gd-05
 grenade_smoke
-fmj_9x18
-fmj_9x19
-fmj_11.43x23
-pmm_9x18
-ap_9x18
-pbp_9x19
-ap_9x19
-hydro_11.43x23
-fmj_545x39
-fmj_556x45
-fmj_57x28
-fmj_9x39
-fmj_792x33
-fmj_762x25
-fmj_762x39
-fmj_762x51
-fmj_762x54
-ep_545x39 
-ap_545x39 
-ss190_556x45                                 
-ap_556x45 
-ss195_57x28
-ap_9x39
-ap_792x33
-ps_762x25
-ap_762x39
-ap_762x51
-7h14_762x54
-ap_762x54
-buck_12x70
-zhekan_12x70
-dart_12x70
-optic_glass
-small_module
-small_battery
-laser_module
 
 [keep_items] ;-- don't release 
 pri_a15_wpn_svu                             = true
