--- a/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/settings/parts.ltx
+++ b/3. AbsHelix Desolation Crafting Plus/gamedata/configs/items/settings/parts.ltx
@@ -1213,46 +1213,46 @@ ar15_cev_magpul1  = prt_i_scrap, prt_i_scrap
 xm8_cev_grip  = prt_i_scrap, prt_i_scrap
 
 ;title						= Grip
-153_grip  = prt_i_scrap, prt_i_plastic
-194_grip  = prt_i_scrap, prt_i_plastic
-590_grip  = prt_i_scrap, prt_i_plastic
-500_grip_wood  = prt_i_scrap, prt_i_plastic
-1014_grip  = prt_i_scrap, prt_i_plastic
-spas12_grip  = prt_i_scrap, prt_i_plastic
-ak_grip  = prt_i_scrap, prt_i_plastic
-550_grip  = prt_i_scrap, prt_i_plastic
-ar15_grip  = prt_i_scrap, prt_i_plastic
-fal_grip  = prt_i_scrap, prt_i_plastic
-g3_grip  = prt_i_scrap, prt_i_plastic
-l85_grip  = prt_i_scrap, prt_i_plastic
-tac-sac_grip  = prt_i_scrap, prt_i_plastic
-bipods_grip  = prt_i_scrap, prt_i_plastic
-zenit_rk1_grip  = prt_i_scrap, prt_i_plastic
-zenit_rk2_grip  = prt_i_scrap, prt_i_plastic
-short_grip  = prt_i_scrap, prt_i_plastic
-rope_grip  = prt_i_scrap, prt_i_plastic
-long_grip  = prt_i_scrap, prt_i_plastic
-lite_grip  = prt_i_scrap, prt_i_plastic
-ergo_grip  = prt_i_scrap, prt_i_plastic
-cadegrip  = prt_i_scrap, prt_i_plastic
-groza_silencer_adapter_grip  = prt_i_scrap, prt_i_plastic
-sks_grip_flash  = prt_i_scrap, prt_i_plastic
-aug1_grip1  = prt_i_scrap, prt_i_plastic
-aug1_grip2  = prt_i_scrap, prt_i_plastic
-aug1_grip3  = prt_i_scrap, prt_i_plastic
-aug1_grip5  = prt_i_scrap, prt_i_plastic
-133_pump  = prt_i_scrap, prt_i_plastic
-870_pump_wood  = prt_i_scrap, prt_i_plastic
-870_pump_black  = prt_i_scrap, prt_i_plastic
-870_pump_green  = prt_i_scrap, prt_i_plastic
-870_pump_flash  = prt_i_scrap, prt_i_plastic
-870_pump_grip  = prt_i_scrap, prt_i_plastic
-590_pump_grip  = prt_i_scrap, prt_i_plastic
-590_grip_hor  = prt_i_scrap, prt_i_plastic
-590_pump  = prt_i_scrap, prt_i_plastic
-194_pump_grip  = prt_i_scrap, prt_i_plastic
-500_pump_grip  = prt_i_scrap, prt_i_plastic
-spas12_pump_gri  = prt_i_scrap, prt_i_plastic
+153_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+194_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+590_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+500_grip_wood  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+1014_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+spas12_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+ak_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+550_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+ar15_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+fal_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+g3_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+l85_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+tac-sac_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+bipods_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+zenit_rk1_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+zenit_rk2_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+short_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+rope_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+long_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+lite_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+ergo_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+cadegrip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+groza_silencer_adapter_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+sks_grip_flash  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+aug1_grip1  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+aug1_grip2  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+aug1_grip3  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+aug1_grip5  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+133_pump  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+870_pump_wood  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+870_pump_black  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+870_pump_green  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+870_pump_flash  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+870_pump_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+590_pump_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+590_grip_hor  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+590_pump  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+194_pump_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+500_pump_grip  = prt_i_scrap, prt_i_plastic, prt_i_plastic
+spas12_pump_gri  = prt_i_scrap, prt_i_plastic, prt_i_plastic
 
 ;title						= Attachment
 ak_adapter_mtk83_pica = prt_i_scrap, prt_i_scrap
@@ -1280,30 +1280,30 @@ rail_bootser_pica = prt_i_scrap, prt_i_scrap
 
 
 ;title						= Sight
-sight_ac11090 = small_module, optic_glass, prt_i_scrap
-sight_aimpoint = small_module, optic_glass, prt_i_scrap
-sight_aimpoint_t1 = small_module, optic_glass, prt_i_scrap
-sight_aimpoint_h1 = small_module, optic_glass, prt_i_scrap
-sight_barska = small_module, optic_glass, prt_i_scrap
-sight_okp3 = small_module, optic_glass, prt_i_scrap
-sight_cmore = small_module, optic_glass, prt_i_scrap
-sight_cz32h = small_module, optic_glass, prt_i_scrap
-sight_deltapoint = small_module, optic_glass, prt_i_scrap
-sight_docter = small_module, optic_glass, prt_i_scrap
-sight_eot_exps3 = small_module, optic_glass, prt_i_scrap
-sight_eot_compact_green = small_module, optic_glass, prt_i_scrap
-sight_eot_red = small_module, optic_glass, prt_i_scrap
-sight_kamper = small_module, optic_glass, prt_i_scrap
-sight_kobra = small_module, optic_glass, prt_i_scrap
-sight_kobra_pica = small_module, optic_glass, prt_i_scrap
-sight_okp7 = small_module, optic_glass, prt_i_scrap
-sight_pka = small_module, optic_glass, prt_i_scrap
-sight_reflerx01 = small_module, optic_glass, prt_i_scrap
-sight_swampfox = small_module, optic_glass, prt_i_scrap
-sight_trijcon_rmr = small_module, optic_glass, prt_i_scrap
-g36_scope_sight = small_module, optic_glass, prt_i_scrap
-sight_pk06 = small_module, optic_glass, prt_i_scrap
-torch_white = fl_bulp, prt_i_scrap
+sight_ac11090 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_aimpoint = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_aimpoint_t1 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_aimpoint_h1 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_barska = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_okp3 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_cmore = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_cz32h = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_deltapoint = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_docter = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_eot_exps3 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_eot_compact_green = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_eot_red = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_kamper = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_kobra = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_kobra_pica = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_okp7 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_pka = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_reflerx01 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_swampfox = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_trijcon_rmr = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+g36_scope_sight = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+sight_pk06 = small_module, optic_glass, prt_i_plastic, prt_i_plastic
+torch_white = fl_bulp, prt_i_plastic, prt_i_plastic
 ;-----------------------------------------------------------------------------------
 ; IRON SIGHT
 ;-----------------------------------------------------------------------------------
@@ -1644,32 +1644,32 @@ af_plates_up                     = prt_o_ballistic_13,prt_o_ballistic_9,prt_i_sc
 af_surge                         = prt_i_resistors,prt_i_scrap,prt_i_fasteners,prt_o_retardant_17
 af_surge_up                      = prt_i_resistors,prt_i_resistors,prt_i_scrap,prt_i_scrap,prt_i_fasteners,prt_i_fasteners,prt_o_retardant_17
 
-detector_advanced                = prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_scrap
-detector_anomaly                 = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_copper, prt_i_scrap
-detector_elite                   = prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_scrap
-detector_geiger                  = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_copper, prt_i_scrap
-detector_radio                   = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
-detector_scientific              = prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_resistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_scrap
+detector_advanced                = prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_scrap, small_battery
+detector_anomaly                 = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_copper, prt_i_scrap, small_battery
+detector_elite                   = prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_scrap, small_battery
+detector_geiger                  = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_copper, prt_i_scrap, small_battery
+detector_radio                   = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners, small_battery
+detector_scientific              = prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_resistors, prt_i_resistors, prt_i_resistors, prt_i_fasteners, prt_i_scrap, small_battery
 detector_simple                  = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_copper, prt_i_fasteners, prt_i_scrap
-device_flashlight                = prt_i_capacitors, prt_i_resistors, prt_i_copper, prt_i_fasteners
-device_pda_1                     = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
-device_pda_2                     = prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
-device_pda_3                     = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
-device_torch_dummy               = prt_i_resistors, prt_i_capacitors, prt_i_copper
-device_torch_nv_1                = prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_copper
-device_torch_nv_2                = prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_copper
-device_torch_nv_3                = prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_resistors, prt_i_resistors, prt_i_copper
+device_flashlight                = prt_i_capacitors, prt_i_resistors, prt_i_copper, prt_i_fasteners, small_battery
+device_pda_1                     = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners, small_battery
+device_pda_2                     = prt_i_capacitors, prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners, small_battery
+device_pda_3                     = prt_i_capacitors, prt_i_capacitors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_resistors, prt_i_resistors, prt_i_copper, prt_i_fasteners, small_battery
+device_torch_dummy               = prt_i_resistors, prt_i_capacitors, prt_i_copper, small_battery
+device_torch_nv_1                = prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_copper, small_battery
+device_torch_nv_2                = prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_capacitors, prt_i_resistors, prt_i_copper, small_battery
+device_torch_nv_3                = prt_i_transistors, prt_i_transistors, prt_i_transistors, prt_i_capacitors, prt_i_resistors, prt_i_resistors, prt_i_copper, small_battery
 itm_pda_common                   = prt_i_capacitors, prt_i_transistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
 itm_pda_rare                     = prt_i_capacitors, prt_i_transistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
 itm_pda_uncommon                 = prt_i_capacitors, prt_i_transistors, prt_i_resistors, prt_i_copper, prt_i_fasteners
 itm_guide_usb_1                  = prt_i_transistors
 itm_guide_usb_2                  = prt_i_transistors
 
-solvent                          = jar, prt_o_fabrics_4, prt_i_textolite
-gun_oil_ru                       = jar, prt_o_fabrics_4, prt_i_textolite
-glue_a                           = jar, prt_o_fabrics_4, prt_i_textolite
-glue_b                           = jar, prt_o_fabrics_4, prt_i_textolite
-glue_e                           = jar, prt_o_fabrics_4, prt_i_textolite
+solvent                          = jar, skin_glue, skin_glue
+gun_oil_ru                       = jar, skin_glue, skin_glue
+glue_a                           = jar, skin_glue, skin_glue
+glue_b                           = jar, skin_glue, skin_glue
+glue_e                           = jar, skin_glue, skin_glue
 heavy_repair_kit                 = prt_i_scrap, prt_i_scrap, prt_i_fasteners
 exo_repair_kit                   = prt_i_scrap, prt_i_scrap, prt_i_scrap, prt_i_fasteners
 armor_repair_fa                  = duct_tape, duct_tape, prt_o_fabrics_4, prt_i_textolite
