--- a/7. AbsHelix Loadout/gamedata/configs/items/settings/new_game_loadouts.ltx
+++ b/7. AbsHelix Loadout/gamedata/configs/items/settings/new_game_loadouts.ltx
@@ -28,12 +28,14 @@ chocolate                               = false,1,0
 glue_b   			                    = false,1,0
 gun_oil_ru 			                    = false,1,0
 flask   			                    = false,1,0
-bandage                                 = false,4,0
-medkit                                  = false,2,0
+bck_ifak                                = false,4,0
+bck_aidkit                              = false,2,0
 detector_simple                         = false,1,0
 device_flashlight                       = false,1,0
 itm_ammokit                             = false,1,0
 swiss_knife                             = false,1,0
+sharpening_stones                        = false,1,0
+lockpick_set                        = false,1,0
 
 wpn_pm_custom                           = true,1,100
 mag_wpn_pm_9x18_fmj                     = true,2,50
@@ -42,19 +44,28 @@ mag_wpn_glock_9x19_fmj                  = true,2,50
 wpn_fnp45                               = true,1,200
 mag_wpn_fnp45_11.43x23_fmj              = true,2,50
 
+;-- smg
+wpn_aug_9mm                             = true,1,300
+wpn_m4_9mm                             = true,1,300
+wpn_saiga9                             = true,1,300
+
+mag_wpn_aug_9mm_9x19_fmj              = true,2,50
+mag_wpn_m4_9mm_fmj              = true,2,50
+mag_wpn_saiga9_9x19_fmj              = true,2,50
+
 ammo_9x18_fmj                           = true,8,50
 ammo_9x19_fmj                           = true,8,50
 ammo_11.43x23_fmj                       = true,8,50
 
-pistol_adapter_usm                      = true,1,500
+pistol_adapter_usm                      = true,1,300
 device_torch_dummy                      = true,1,250
 sight_deltapoint                        = true,1,200
 laser_red                               = true,1,200
 laser_blue                              = true,1,200
 laser_green                             = true,1,200
 flashlight                              = true,1,150
-fnx_silencer2                              = true,1,150
-9mm_silencer                              = true,1,150
+fnx_silencer2                           = true,1,150
+9mm_silencer                            = true,1,150
 
 jgut                                    = true,2,200
 stimpack                                = true,2,200
